[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/cannon.gd" type="Script" id=1]
[ext_resource path="res://scenes/cannonball.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tower/tower_tileset.png" type="Texture" id=3]
[ext_resource path="res://scripts/radius.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 14.9668, 15.4422 )

[node name="tower_cannon" type="Node2D"]

z_index = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Z Index" ]
bullet = ExtResource( 2 )
fire_rate = 1
bullet_health = 2
cost = 500

[node name="tower" type="Sprite" parent="." index="0"]

z_index = 1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )
_sections_unfolded = [ "Region", "Z Index" ]

[node name="body" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 7
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision" ]

[node name="collision" type="CollisionShape2D" parent="body" index="0"]

shape = SubResource( 1 )

[node name="radius" type="Area2D" parent="." index="2"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Collision", "Z Index" ]

[node name="shoot_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = true

[node name="bullets" type="Node" parent="." index="4"]

[connection signal="input_event" from="body" to="." method="_on_body_input_event"]

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]


